--- a/MauiTemplate/View/MainPage.xaml
+++ b/MauiTemplate/View/MainPage.xaml
@@ -5,188 +5,4 @@
 	xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
 	xmlns:model="clr-namespace:GymTracker.Model"
 	xmlns:viewmodel="clr-namespace:GymTracker.ViewModel"
-	Title="Interval Timer"
-	x:DataType="viewmodel:MainPageViewModel"
-	BackgroundColor="{Binding BackgroundColor}">
-
-	<!--  Main Grid  -->
-	<Grid>
-		<Grid.RowDefinitions>
-			<RowDefinition Height="20" />
-			<RowDefinition Height="*" />
-			<RowDefinition Height="20" />
-		</Grid.RowDefinitions>
-		<Grid.ColumnDefinitions>
-			<ColumnDefinition Width="20" />
-			<ColumnDefinition x:Name="col" Width="*" />
-			<ColumnDefinition Width="20" />
-		</Grid.ColumnDefinitions>
-
-		<StackLayout
-			Grid.Row="1"
-			Grid.Column="1"
-			HorizontalOptions="Center"
-			VerticalOptions="Center">
-			<!--  Circle  -->
-			<Grid MaximumWidthRequest="300">
-				<!--
-					Fill="#141414"
-				-->
-				<Ellipse
-					Aspect="Uniform"
-					Fill="{Binding EllipseColor}"
-					MaximumHeightRequest="300"
-					MaximumWidthRequest="300"
-					Stroke="#EDEDED"
-					StrokeThickness="5" />
-				<Grid>
-					<Grid.RowDefinitions>
-						<RowDefinition Height="*" />
-						<RowDefinition Height="*" />
-						<RowDefinition Height="*" />
-					</Grid.RowDefinitions>
-					<Grid.ColumnDefinitions>
-						<ColumnDefinition Width="*" />
-					</Grid.ColumnDefinitions>
-				</Grid>
-				<StackLayout
-					HorizontalOptions="Center"
-					IsVisible="True"
-					VerticalOptions="Center">
-					<Label
-						Grid.Row="0"
-						FontSize="52"
-						HorizontalOptions="Center"
-						Text="{Binding SetsCountLeft}"
-						VerticalOptions="Center" />
-					<Label
-						Grid.Row="1"
-						FontSize="76"
-						IsVisible="{Binding IsNotRestTime}"
-						Text="WORK" />
-					<Label
-						Grid.Row="1"
-						FontSize="76"
-						IsVisible="{Binding IsRestTime}"
-						Text="REST" />
-					<Label
-						Grid.Row="2"
-						FontSize="52"
-						HorizontalOptions="Center"
-						IsVisible="{Binding IsNotRestTime}"
-						Text="{Binding WorkTimeLeft}"
-						VerticalOptions="Center" />
-					<Label
-						Grid.Row="2"
-						FontSize="52"
-						HorizontalOptions="Center"
-						IsVisible="{Binding IsRestTime}"
-						Text="{Binding RestTimeLeft}"
-						VerticalOptions="Center" />
-				</StackLayout>
-			</Grid>
-
-			<!--  Settings  -->
-			<StackLayout IsVisible="True">
-				<Label
-					Margin="10,0,0,0"
-					FontSize="24"
-					HorizontalOptions="Center">
-					Sets
-				</Label>
-				<HorizontalStackLayout HorizontalOptions="Center">
-					<Button
-						ClassId="sets"
-						IsVisible="{Binding IsNotStarted}"
-						Pressed="OnMinusBtnPressed"
-						Released="OnBtnReleased"
-						Text="-" />
-					<Label
-						Margin="10,0"
-						FontSize="24"
-						Text="{Binding SetsCount}"
-						VerticalOptions="Center" />
-					<Button
-						ClassId="sets"
-						IsVisible="{Binding IsNotStarted}"
-						Pressed="OnPlusBtnPressed"
-						Released="OnBtnReleased"
-						Text="+" />
-				</HorizontalStackLayout>
-
-				<Label
-					Margin="10,0,0,0"
-					FontSize="24"
-					HorizontalOptions="Center">
-					Work Time
-				</Label>
-				<HorizontalStackLayout HorizontalOptions="Center">
-					<Button
-						ClassId="workTime"
-						IsVisible="{Binding IsNotStarted}"
-						Pressed="OnMinusBtnPressed"
-						Released="OnBtnReleased"
-						Text="-" />
-					<Label
-						Margin="10,0"
-						FontSize="24"
-						Text="{Binding WorkTime}"
-						VerticalOptions="Center" />
-					<Button
-						ClassId="workTime"
-						IsVisible="{Binding IsNotStarted}"
-						Pressed="OnPlusBtnPressed"
-						Released="OnBtnReleased"
-						Text="+" />
-				</HorizontalStackLayout>
-
-				<Label
-					Margin="10,0,0,0"
-					FontSize="24"
-					HorizontalOptions="Center">
-					Rest Time
-				</Label>
-				<HorizontalStackLayout HorizontalOptions="Center">
-					<Button
-						ClassId="restTime"
-						IsVisible="{Binding IsNotStarted}"
-						Pressed="OnMinusBtnPressed"
-						Released="OnBtnReleased"
-						Text="-" />
-					<Label
-						Margin="10,0"
-						FontSize="24"
-						Text="{Binding RestTime}"
-						VerticalOptions="Center" />
-					<Button
-						ClassId="restTime"
-						IsVisible="{Binding IsNotStarted}"
-						Pressed="OnPlusBtnPressed"
-						Released="OnBtnReleased"
-						Text="+" />
-				</HorizontalStackLayout>
-			</StackLayout>
-
-			<Button
-				Margin="0,24,0,0"
-				Command="{Binding StartIntervalCommand}"
-				IsVisible="{Binding IsNotStarted}"
-				Text="Start" />
-			<Button
-				Margin="0,24,0,0"
-				Command="{Binding PauseIntervalCommand}"
-				IsVisible="{Binding IsRunning}"
-				Text="Pause" />
-			<Button
-				Margin="0,24,0,0"
-				Command="{Binding ResumeIntervalCommand}"
-				IsVisible="{Binding IsNotRunningAndIsStarted}"
-				Text="Resume" />
-			<Button
-				Margin="0,24,0,0"
-				Command="{Binding StopIntervalCommand}"
-				IsVisible="{Binding IsStarted}"
-				Text="Stop" />
-		</StackLayout>
-	</Grid>
-</ContentPage>
+	Title="MainPage" />
