--- a/MauiTemplate/View/OngoingRoutinePage.xaml
+++ b/MauiTemplate/View/OngoingRoutinePage.xaml
@@ -118,7 +118,10 @@
 				IndicatorColor="LightGray"
 				SelectedIndicatorColor="DarkGray" />
 
-			<Button Text="Exit" VerticalOptions="Center" />
+			<Button
+				Command="{Binding ExitRoutineCommand}"
+				Text="Exit"
+				VerticalOptions="Center" />
 
 		</StackLayout>
 
