Add save exercisehistory

--- a/MauiTemplate/View/OngoingRoutinePage.xaml
+++ b/MauiTemplate/View/OngoingRoutinePage.xaml
@@ -140,10 +140,17 @@
 				IndicatorColor="LightGray"
 				SelectedIndicatorColor="DarkGray" />
 
-			<Button
-				Command="{Binding ExitRoutineCommand}"
-				Text="Exit"
-				VerticalOptions="Center" />
+			<HorizontalStackLayout HorizontalOptions="CenterAndExpand">
+				<Button
+					Command="{Binding ExitRoutineCommand}"
+					Text="Exit"
+					VerticalOptions="Center" />
+				<Button
+					Command="{Binding SaveCommand}"
+					Text="Save"
+					VerticalOptions="Center" />
+
+			</HorizontalStackLayout>
 
 		</StackLayout>
 
