--- a/MauiTemplate/View/ExerciseDetailsPage.xaml
+++ b/MauiTemplate/View/ExerciseDetailsPage.xaml
@@ -27,5 +27,10 @@
 				<Label IsVisible="{Binding Exercise.TrackTime}" Text="time" />
 			</VerticalStackLayout>
 		</HorizontalStackLayout>
+
+		<Button
+			Command="{Binding GoToHistoryCommand}"
+			CommandParameter="{Binding Exercise.ID}"
+			Text="History" />
 	</VerticalStackLayout>
 </ContentPage>
