Change binding to Exercise

--- a/MauiTemplate/View/ExerciseDetailsPage.xaml
+++ b/MauiTemplate/View/ExerciseDetailsPage.xaml
@@ -30,7 +30,7 @@
 
 		<Button
 			Command="{Binding GoToHistoryCommand}"
-			CommandParameter="{Binding Exercise.ID}"
+			CommandParameter="{Binding Exercise}"
 			Text="History" />
 	</VerticalStackLayout>
 </ContentPage>
