--- a/MauiTemplate/View/ExerciseHistoryPage.xaml
+++ b/MauiTemplate/View/ExerciseHistoryPage.xaml
@@ -5,7 +5,7 @@
 	xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
 	xmlns:model="clr-namespace:GymTracker.Model"
 	xmlns:viewmodel="clr-namespace:GymTracker.ViewModel"
-	Title="Your Routines"
+	Title="{Binding Exercise.Name}"
 	x:DataType="viewmodel:ExerciseHistoryPageViewModel"
 	Shell.FlyoutBehavior="Disabled"
 	Style="{StaticResource PageStyle}">
@@ -13,5 +13,5 @@
 		<BackButtonBehavior Command="{Binding GoBackCommand}" />
 	</Shell.BackButtonBehavior>
 
-	<Label Text="{Binding Id}" />
+	<Label Text="{Binding Exercise.ID}" />
 </ContentPage>
