--- a/MauiTemplate/View/ExerciseDetailsPage.xaml
+++ b/MauiTemplate/View/ExerciseDetailsPage.xaml
@@ -3,34 +3,53 @@
 	x:Class="GymTracker.View.ExerciseDetailsPage"
 	xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
 	xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+	xmlns:local="clr-namespace:MauiSample;assembly=MauiSample"
+	xmlns:lvc="clr-namespace:LiveChartsCore.SkiaSharpView.Maui;assembly=LiveChartsCore.SkiaSharpView.Maui"
 	xmlns:model="clr-namespace:GymTracker.Model"
 	xmlns:viewmodel="clr-namespace:GymTracker.ViewModel"
 	Title="Details"
 	x:DataType="viewmodel:ExerciseDetailsPageViewModel"
 	Shell.FlyoutBehavior="Disabled"
 	Style="{StaticResource PageStyle}">
+	<Grid>
+		<Grid.RowDefinitions>
+			<RowDefinition Height="auto" />
+			<RowDefinition Height="*" />
+			<RowDefinition Height="auto" />
+		</Grid.RowDefinitions>
+		<VerticalStackLayout>
+			<HorizontalStackLayout>
+				<Label Text="Name:" />
+				<Label Text="{Binding Exercise.Name}" />
+			</HorizontalStackLayout>
+			<HorizontalStackLayout>
+				<Label Text="Notes:" />
+				<Label Text="{Binding Exercise.Notes}" />
+			</HorizontalStackLayout>
+			<HorizontalStackLayout>
+				<Label Text="Tracking:" />
+				<VerticalStackLayout>
+					<Label IsVisible="{Binding Exercise.TrackReps}" Text="reps" />
+					<Label IsVisible="{Binding Exercise.TrackWeight}" Text="weight" />
+					<Label IsVisible="{Binding Exercise.TrackTime}" Text="time" />
+				</VerticalStackLayout>
+			</HorizontalStackLayout>
 
-	<VerticalStackLayout>
-		<HorizontalStackLayout>
-			<Label Text="Name:" />
-			<Label Text="{Binding Exercise.Name}" />
-		</HorizontalStackLayout>
-		<HorizontalStackLayout>
-			<Label Text="Notes:" />
-			<Label Text="{Binding Exercise.Notes}" />
-		</HorizontalStackLayout>
-		<HorizontalStackLayout>
-			<Label Text="Tracking:" />
-			<VerticalStackLayout>
-				<Label IsVisible="{Binding Exercise.TrackReps}" Text="reps" />
-				<Label IsVisible="{Binding Exercise.TrackWeight}" Text="weight" />
-				<Label IsVisible="{Binding Exercise.TrackTime}" Text="time" />
-			</VerticalStackLayout>
-		</HorizontalStackLayout>
+		</VerticalStackLayout>
 
+
+		<ScrollView Grid.Row="1">
+			<lvc:CartesianChart
+				Grid.Row="1"
+				Margin="10,50,10,50"
+				Series="{Binding Series}"
+				XAxes="{Binding XAxis}"
+				ZoomMode="X" />
+		</ScrollView>
 		<Button
+			Grid.Row="2"
 			Command="{Binding GoToHistoryCommand}"
 			CommandParameter="{Binding Exercise}"
 			Text="History" />
-	</VerticalStackLayout>
+	</Grid>
 </ContentPage>
