--- a/MauiTemplate/View/ExerciseHistoryPage.xaml
+++ b/MauiTemplate/View/ExerciseHistoryPage.xaml
@@ -27,7 +27,24 @@
 								<ColumnDefinition Width="1*" />
 							</Grid.ColumnDefinitions>
 
-							<Label Margin="10,5,0,5" Text="{Binding RepsCount}" />
+							<HorizontalStackLayout>
+								<HorizontalStackLayout Margin="0,0,10,0">
+									<Label Text="R:" />
+									<Label Text="{Binding RepsCount}" />
+								</HorizontalStackLayout>
+								<HorizontalStackLayout Margin="0,0,10,0">
+									<Label Text="W:" />
+									<Label Text="{Binding Weight}" />
+								</HorizontalStackLayout>
+								<HorizontalStackLayout Margin="0,0,10,0">
+									<Label Text="T:" />
+									<Label Text="{Binding TimeInSeconds}" />
+								</HorizontalStackLayout>
+								<HorizontalStackLayout Margin="0,0,10,0">
+									<Label Text="Date:" />
+									<Label Text="{Binding DateTime}" />
+								</HorizontalStackLayout>
+							</HorizontalStackLayout>
 							<ImageButton
 								Grid.Column="1"
 								Command="{Binding Source={RelativeSource AncestorType={x:Type viewmodel:ExerciseHistoryPageViewModel}}, Path=DeleteCommand}"
