--- a/MauiTemplate/View/ExerciseDetailsPage.xaml
+++ b/MauiTemplate/View/ExerciseDetailsPage.xaml
@@ -7,7 +7,7 @@
 	xmlns:lvc="clr-namespace:LiveChartsCore.SkiaSharpView.Maui;assembly=LiveChartsCore.SkiaSharpView.Maui"
 	xmlns:model="clr-namespace:GymTracker.Model"
 	xmlns:viewmodel="clr-namespace:GymTracker.ViewModel"
-	Title="Details"
+	Title="{Binding Exercise.Name}"
 	x:DataType="viewmodel:ExerciseDetailsPageViewModel"
 	Shell.FlyoutBehavior="Disabled"
 	Style="{StaticResource PageStyle}">
@@ -19,28 +19,103 @@
 		</Grid.RowDefinitions>
 		<VerticalStackLayout>
 			<HorizontalStackLayout>
-				<Label Text="Name:" />
-				<Label Text="{Binding Exercise.Name}" />
-			</HorizontalStackLayout>
-			<HorizontalStackLayout>
 				<Label Text="Notes:" />
 				<Label Text="{Binding Exercise.Notes}" />
 			</HorizontalStackLayout>
-			<HorizontalStackLayout>
-				<Label Text="Tracking:" />
-				<VerticalStackLayout>
-					<Label IsVisible="{Binding Exercise.TrackReps}" Text="reps" />
-					<Label IsVisible="{Binding Exercise.TrackWeight}" Text="weight" />
-					<Label IsVisible="{Binding Exercise.TrackTime}" Text="time" />
-				</VerticalStackLayout>
-			</HorizontalStackLayout>
-
+			<Grid Margin="20,0,20,0">
+				<Grid.ColumnDefinitions>
+					<ColumnDefinition Width="*" />
+					<ColumnDefinition Width="*" />
+					<ColumnDefinition Width="*" />
+				</Grid.ColumnDefinitions>
+				<!--<Label
+					HorizontalTextAlignment="Center"
+					IsVisible="{Binding Exercise.TrackReps}"
+					Text="reps"
+					VerticalTextAlignment="Center" />
+				<Label
+					Grid.Column="1"
+					HorizontalTextAlignment="Center"
+					IsVisible="{Binding Exercise.TrackWeight}"
+					Text="weight"
+					VerticalTextAlignment="Center" />
+				<Label
+					Grid.Column="2"
+					IsVisible="{Binding Exercise.TrackTime}"
+					Text="time" />-->
+				<Frame
+					BackgroundColor="#D4ADFC"
+					CornerRadius="30"
+					HorizontalOptions="CenterAndExpand"
+					IsVisible="{Binding Exercise.TrackReps}"
+					VerticalOptions="CenterAndExpand"
+					WidthRequest="110">
+					<StackLayout>
+						<Label
+							FontSize="16"
+							HorizontalTextAlignment="Center"
+							Text="REPS"
+							TextColor="Black"
+							VerticalTextAlignment="Start" />
+						<Label
+							FontSize="42"
+							HorizontalTextAlignment="Center"
+							Text="0"
+							TextColor="Black"
+							VerticalTextAlignment="Center" />
+					</StackLayout>
+				</Frame>
+				<Frame
+					Grid.Column="1"
+					Margin="10"
+					BackgroundColor="#CE0F0F"
+					CornerRadius="30"
+					HorizontalOptions="CenterAndExpand"
+					IsVisible="{Binding Exercise.TrackWeight}"
+					VerticalOptions="CenterAndExpand"
+					WidthRequest="110">
+					<StackLayout>
+						<Label
+							FontSize="16"
+							HorizontalTextAlignment="Center"
+							Text="WEIGHT"
+							VerticalTextAlignment="Start" />
+						<Label
+							FontSize="42"
+							HorizontalTextAlignment="Center"
+							Text="0"
+							VerticalTextAlignment="Center" />
+					</StackLayout>
+				</Frame>
+				<Frame
+					Grid.Column="2"
+					Margin="10"
+					BackgroundColor="#3F92D1"
+					CornerRadius="30"
+					HorizontalOptions="CenterAndExpand"
+					IsVisible="{Binding Exercise.TrackTime}"
+					VerticalOptions="CenterAndExpand"
+					WidthRequest="110">
+					<StackLayout>
+						<Label
+							FontSize="16"
+							HorizontalTextAlignment="Center"
+							Text="TIME "
+							VerticalTextAlignment="Start" />
+						<Label
+							FontSize="42"
+							HorizontalTextAlignment="Center"
+							Text="0"
+							VerticalTextAlignment="Center" />
+					</StackLayout>
+				</Frame>
+			</Grid>
 		</VerticalStackLayout>
 
 		<ScrollView Grid.Row="1">
 			<StackLayout>
 				<lvc:CartesianChart
-					Margin="0,0,50,0"
+					Margin="30,0,50,0"
 					HeightRequest="{Binding Source={RelativeSource AncestorType={x:Type ScrollView}}, Path=Width}"
 					IsVisible="{Binding Exercise.TrackReps}"
 					MaximumHeightRequest="400"
@@ -51,7 +126,7 @@
 					YAxes="{Binding RepsYAxis}"
 					ZoomMode="X" />
 				<lvc:CartesianChart
-					Margin="0,0,50,0"
+					Margin="30,0,50,0"
 					HeightRequest="{Binding Source={RelativeSource AncestorType={x:Type ScrollView}}, Path=Width}"
 					IsVisible="{Binding Exercise.TrackWeight}"
 					MaximumHeightRequest="400"
@@ -62,7 +137,7 @@
 					YAxes="{Binding WeightYAxis}"
 					ZoomMode="X" />
 				<lvc:CartesianChart
-					Margin="0,0,50,0"
+					Margin="30,0,50,0"
 					HeightRequest="{Binding Source={RelativeSource AncestorType={x:Type ScrollView}}, Path=Width}"
 					IsVisible="{Binding Exercise.TrackTime}"
 					MaximumHeightRequest="400"
