--- a/MauiTemplate/View/MainPage.xaml
+++ b/MauiTemplate/View/MainPage.xaml
@@ -3,6 +3,7 @@
 	x:Class="GymTracker.View.MainPage"
 	xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
 	xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+	xmlns:lvc="clr-namespace:LiveChartsCore.SkiaSharpView.Maui;assembly=LiveChartsCore.SkiaSharpView.Maui"
 	xmlns:model="clr-namespace:GymTracker.Model"
 	xmlns:viewmodel="clr-namespace:GymTracker.ViewModel"
 	Title="MainPage"
@@ -27,6 +28,8 @@
 				<ColumnDefinition />
 				<ColumnDefinition />
 			</Grid.ColumnDefinitions>
+
+			<!--  ========================= COLUMN 1 =========================  -->
 			<StackLayout HorizontalOptions="Fill" VerticalOptions="FillAndExpand">
 				<Frame
 					Margin="10"
@@ -49,20 +52,45 @@
 					</StackLayout>
 				</Frame>
 			</StackLayout>
-			<StackLayout Grid.Column="1" HorizontalOptions="Fill">
+
+			<!--  ========================= COLUMN 2 =========================  -->
+			<Grid Grid.Column="1">
+				<Grid.RowDefinitions>
+					<RowDefinition />
+				</Grid.RowDefinitions>
+
+				<!--  Rest/Work Ratio  -->
 				<Frame
 					Margin="10"
+					Padding="0,20,0,5"
 					BackgroundColor="#424242"
 					CornerRadius="30"
 					HorizontalOptions="Fill">
-					<StackLayout>
-						<Label FontSize="32" Text="Lorem" />
-						<Label FontSize="24" Text="ipsum" />
-						<Label FontSize="24" Text="ipsum" />
-						<Label FontSize="24" Text="ipsum" />
-					</StackLayout>
+					<Grid>
+						<Grid.RowDefinitions>
+							<RowDefinition />
+							<RowDefinition Height="7*" />
+							<RowDefinition />
+						</Grid.RowDefinitions>
+						<Label
+							FontSize="32"
+							HorizontalTextAlignment="Center"
+							Text="Work/Rest"
+							VerticalOptions="Center" />
+						<lvc:PieChart
+							Grid.Row="1"
+							Margin="0"
+							Series="{Binding RatioSeries}" />
+						<Label
+							Grid.Row="2"
+							Margin="0,0,20,0"
+							FontSize="16"
+							HorizontalTextAlignment="End"
+							Text="(Last 30 days)"
+							VerticalOptions="Center" />
+					</Grid>
 				</Frame>
-			</StackLayout>
+			</Grid>
 		</Grid>
 	</StackLayout>
 </ContentPage>
